[gd_scene load_steps=2 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 273.0
margin_top = 125.0
margin_right = 366.0
margin_bottom = 235.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 93.0
margin_bottom = 14.0
text = "Jumping Game"

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 93.0
margin_bottom = 38.0
text = "New Game"

[node name="loadgame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 93.0
margin_bottom = 62.0
text = "Load Game"
__meta__ = {
"_edit_lock_": true
}

[node name="QuitGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 93.0
margin_bottom = 86.0
text = "Quit Game"

[node name="ResetGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 93.0
margin_bottom = 110.0
text = "reset game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/loadgame" to="." method="_on_loadgame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResetGame" to="." method="_on_ResetGame_pressed"]
